# Tradeline-hov

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
app/: .env.local.example  package.json  tailwind.config.ts  tsconfig.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/(dashboard)/arbiter/: page.tsx
app/src/app/(dashboard)/client/: page.tsx
app/src/app/(dashboard)/freelancer/: page.tsx
app/src/components/: MilestoneCard.tsx  Nav.tsx  ReputationBadge.tsx
app/src/lib/: contracts.ts  mock-data.ts  utils.ts  wallet-context.tsx
app/src/types/: index.ts
contracts/arbiter_registry/: Cargo.toml
contracts/arbiter_registry/src/: lib.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs
indexer/: .env.example  package.json
indexer/src/: index.ts
indexer/src/db/: client.ts  migrate.ts  schema.sql
scripts/: .env.example  deploy.ps1  deploy.sh  package.json  seed_demo.ts  tsconfig.json
sdk/: package.json
sdk/src/: arbiter_registry.ts  base.ts  config.ts  escrow.ts  index.ts  reputation.ts  types.ts
