[workspace]
resolver = "2"
members = [
    "contracts/escrow",
    "contracts/reputation",
    "contracts/arbiter_registry",
]

# Pin soroban-sdk uniformly across all workspace members
[workspace.dependencies]
soroban-sdk = { version = "21.7.6", features = ["alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
